new contents added

--- a/HeaderHomeWork/index.html
+++ b/HeaderHomeWork/index.html
@@ -10,7 +10,8 @@
 
 <!-- Hakkımda Bölümü Başlangıç -->
 
-   <h1>Taha Tan</h1>
+   <h1><em>Taha Tan</em></h1>
+   <hr>
         <h2>Hakkımda</h2>
             <p>Merhaba, Ben Taha Tan. İstanbulda Yaşıyorum. Web Development Eğitimleri Alıyor, Çalışıyorum !</p>
 
@@ -19,18 +20,22 @@
 <!-- Sevdiğim Şeyler Bölümü Başlangıç -->
     <h2>Sevdiğim Kitaplar</h2>
         <ul>
-            <li>Beyin - David Eagleman </li>
+            <li> <a href="https://www.goodreads.com/book/show/25776132-the-brain">Beyin - David Eagleman </a></li>
             <li>Tanrı Yanılgısı - Richard Dawkinks </li>
             <li>Cosmos - Carl Sagan </li>
         </ul>
 
         <h2>Hobilerim</h2>
         <ul>
-            <li> BodyBuilding </li>
-            <li> Koşu </li>
+            <li> Koşu Yapmak </li>
             <li> Kitap Okumak </li>
             <li> Yeni İnsanlar Tanımak, Sohbet Etmek </li>
         </ul>
 <!-- Sevdiğim Şeyler Bölümü Bitiş -->
+
+    <h2>En Sevdigim Kitap</h2> 
+            <img src="https://i.dr.com.tr/cache/500x400-0/originals/0000000693729-1.jpg" alt="Beyin - David Eagleman Kitap Kapagi">
+            <h3> <span style="color: blue;">Beyin - David Eagleman </span></h3>
+            <br><hr>
 </body>
 </html>
